[gd_scene load_steps=6 format=2]

[ext_resource path="res://util/ComparisonBar.gd" type="Script" id=1]
[ext_resource path="res://util/pixel.png" type="Texture" id=2]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 0, 3.25, 1 )
flag_disable_z = true
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 172.19
initial_velocity_random = 0.13
angular_velocity = 38.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.72
color_ramp = SubResource( 3 )
hue_variation = 0.03
hue_variation_random = 0.62

[node name="ComparisonBar" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftSide" type="Line2D" parent="."]
position = Vector2( -0.5, 0.5 )
points = PoolVector2Array( 0, 0, 203, 0 )
width = 7.5
default_color = Color( 0.909804, 0.8, 0.647059, 1 )
begin_cap_mode = 2

[node name="RightSide" type="Line2D" parent="."]
position = Vector2( -0.5, 0.5 )
points = PoolVector2Array( 406, 0, 203, 0 )
width = 7.5
default_color = Color( 0.92549, 0, 0.54902, 1 )
begin_cap_mode = 2

[node name="LeftDegrade" type="Particles2D" parent="."]
position = Vector2( 203, 0.5 )
emitting = false
amount = 300
lifetime = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="RightDegrade" type="Particles2D" parent="."]
modulate = Color( 1, 0.332031, 0.732813, 1 )
position = Vector2( 203, 0.5 )
rotation = 3.14159
emitting = false
amount = 120
lifetime = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
